# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
App/: Renderer.cpp  Renderer.h
Engine/: Application.cpp  Application.h  Image.cpp  Image.h  Layer.h  Random.cpp  Random.h  Timer.h
